- Issue #47, type in redirect definition on waf-fle.conf (apache config 
  file) for WAF-FLE;
- Issue #47, error in IP address validation function of Add Sensor in 
  managment interface;
- Fixes github issue #13, processing of client ip range defined by a 
  netmask;
- Issue #18, fixes regression on client IP filter with no netmask, 
  thanks to Juraj Sakala for the patch;
- Change the management menu behavior, to address a performance impact 
  described by Juraj Sakala (in issue #14 on GitHub). A temporary denial 
  of service happens while database events are counted for get sensor 
  information. Now the user can change (on config.php and in runtime) if 
  Sensor Info will be loaded or not. Database schema change to fix this, 
  but will change in update process only on next release, if you want to 
  change now, access your MySQL and use the command below (this can need 
  some time and disk space):      
     # use waffle;
     # ALTER TABLE `waffle`.`events` ADD INDEX `sensor3` (`sensor_id`);

Improvements:
--------------
- mlog2waffle requirements better clarified em their README, and now is 
  possible to use it with old version of libwww-perl, but no self-signed 
  certificate in that case;
- Better error message in case of database error;
- mlog2waffle now has a crontab script;
- You can disable/enable error log in mlog2waffle in mlog2waffle.conf;
- waf-fle.conf minor text adjustment;
- Corrected push-mlogc.sh template in Event Feeder Wizard;
- Filter for preserved events added. Thanks to Juraj Sakala;
- Better event handling in controller, code cleanup, including broken 
  log format of libinjetion, thanks to Juraj Sakala for propose code and 
  show the libinject problem in issue #17;
- Event details are reordered to put "Rule Message" first, event details 
  later;
- Some grammar correction. Thanks to Cliton Nichols;
- Now accept events sent by mod_security compiled/patched by Atomic 
  Turtle to change label "Producer" to "WAF". Issue #22 and #48;